--- a/data/v2rayse-free.yaml
+++ b/data/v2rayse-free.yaml
@@ -1,9 +1,9 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash.Meta
-# 创建时间：2023-11-08 18:47:56
+# 创建时间：2023-11-10 10:28:23
 # 使用模版：V2RaySE 默认模版
-# 节点数量：15
+# 节点数量：27
 ####################################
 # !!当前配置文件请使用基于 Clash.Meta 内核程序
 mixed-port: 7890
@@ -86,144 +86,228 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"45.58.152.70","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1699193100388","headers":{"host":"www.54964745.xyz"}}}
-  - {"name":"🇫🇷_FR_法国->🇳🇱_NL_荷兰","type":"vmess","server":"156.249.18.157","port":30000,"cipher":"auto","uuid":"130c9f2e-42b1-4ebf-b345-e26456a061f9","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1699280099138","headers":{"host":"www.53489761.xyz"}}}
-  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国_1","type":"vless","server":"172.67.178.12","port":443,"uuid":"43e00e4c-2316-4dc9-8262-cef31886dc56","tls":true,"servername":"marly.toptechnonews.com","network":"ws","ws-opts":{"path":"/nimws"}}
-  - {"name":"🇨🇦_CA_加拿大->🇬🇧_GB_英国","type":"vmess","server":"64.68.192.77","port":443,"cipher":"auto","uuid":"03fcc618-b93d-6796-6aed-8a38c975d581","alterId":1,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"linkvws","headers":{"host":"ophelia.mom"}}}
-  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国_2","type":"vless","server":"172.67.156.27","port":443,"uuid":"d6f79630-aa94-4536-b2ef-899b5acb3b49","tls":true,"servername":"unmanliest.appreviewcenter.com","network":"ws","ws-opts":{"path":"/nimws"}}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"104.21.75.246","port":80,"cipher":"auto","uuid":"c458695d-6908-45c3-9512-e0c46418454c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"sbl2.shabijichang.com"}}}
+  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国_1","type":"vmess","server":"162.159.25.25","port":2082,"cipher":"auto","uuid":"1F7C900A-6AD7-41CF-A37E-85873E566C40","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/surfboardv2ray.jilino2325.workers.dev/speedtest/Lille.Kotick.site","headers":{"host":"erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev"}}}
+  - {"name":"🇺🇸_US_美国->🇮🇳_IN_印度","type":"vmess","server":"mm2.shabijichang.com","port":80,"cipher":"auto","uuid":"c458695d-6908-45c3-9512-e0c46418454c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"mm2.shabijichang.com"}}}
+  - {"name":"🇫🇷_FR_法国","type":"ss","server":"51.158.54.209","port":443,"password":"asdKkaskJKfnsa","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"216.73.158.35","port":443,"cipher":"auto","uuid":"186b8bd9-6f05-48bc-80dc-f36e84ffa601","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmess-ws"}}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"ld2.shabijichang.com","port":80,"cipher":"auto","uuid":"c458695d-6908-45c3-9512-e0c46418454c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"ld2.shabijichang.com"}}}
+  - {"name":"🇬🇧_GB_英国_1","type":"ss","server":"198.244.228.191","port":443,"password":"asdKkaskJKfnsa","cipher":"aes-256-cfb"}
   - {"name":"🇨🇳_CN_中国->🇬🇧_GB_英国","type":"vmess","server":"112.29.94.23","port":49006,"cipher":"auto","uuid":"21a9bff2-72de-4e62-93ff-8b159f66d875","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国_3","type":"vmess","server":"104.25.77.185","port":2082,"cipher":"auto","uuid":"DCE76061-EE65-49DB-997C-A6A880DADE3A","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/Lille.kotick.site:443/speedtest","headers":{"host":"bold-mud-c089.owotaa.workers.dev"}}}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"162.159.133.234","port":443,"cipher":"auto","uuid":"03fcc618-b93d-6796-6aed-8a38c975d581","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"linkvws","headers":{"host":"octavi.cfd"}}}
-  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国_4","type":"vmess","server":"162.159.25.17","port":2082,"cipher":"auto","uuid":"DCE76061-EE65-49DB-997C-A6A880DADE3A","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/Lille.kotick.site:443/speedtest","headers":{"host":"bold-mud-c089.owotaa.workers.dev"}}}
-  - {"name":"🇺🇸_US_美国_4","type":"vless","server":"104.31.16.109","port":443,"uuid":"97d26fd0-e2ac-4b1f-a098-f422fc49bd30","tls":true,"servername":"singbox.cypherpunks.asia","network":"ws","ws-opts":{"path":"/cypherpunks"}}
-  - {"name":"🇩🇪_DE_德国_1","type":"trojan","server":"89.163.220.99","port":443,"udp":true,"password":"29ea82cf-f956-42b2-a5dc-35feea39e7ff","sni":"glc-de1.windowsupdatea.com","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"45.199.138.146","port":30000,"cipher":"auto","uuid":"4ec0ae62-de09-4029-904a-0313d4628ecf","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1699193100388","headers":{"host":"www.19229362.xyz"}}}
-  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰","type":"vmess","server":"45.199.138.191","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1699280099138","headers":{"host":"www.42077230.xyz"}}}
-  - {"name":"🇩🇪_DE_德国_2","type":"trojan","server":"5.104.108.120","port":443,"udp":true,"password":"73751185-6cb0-4675-a8ee-5b7b75bf772d","sni":"20-24-33-134.nhost.00cdn.com","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_1","type":"vless","server":"104.31.16.242","port":8443,"uuid":"6c62b799-5d55-4b8a-9327-12cd6b01cf2b","tls":true,"servername":"15.globalnetvpn.site","network":"ws","ws-opts":{"path":"/"}}
+  - {"name":"🇦🇫_AF_阿富汗","type":"ss","server":"121.127.46.147","port":989,"password":"f8f7aCzcPKbsF8p3","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_3","type":"trojan","server":"141.193.68.81","port":443,"udp":true,"password":"29ea82cf-f956-42b2-a5dc-35feea39e7ff","sni":"glc-us3.windowsupdatea.com","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰_1","type":"vmess","server":"45.199.138.191","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1699280099138","headers":{"host":"www.42077230.xyz"}}}
+  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"cf-lt.sharecentre.online","port":80,"cipher":"auto","uuid":"3d761afc-6dfd-49d9-9d0f-b79341391f26","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v005.ssrsub.com"}}}
+  - {"name":"🇨🇭_CH_瑞士","type":"ss","server":"84.17.53.163","port":80,"password":"asdKkaskJKfnsa","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_5","type":"vless","server":"172.67.191.234","port":2083,"uuid":"ae4972fb-17b9-47a8-9faa-a57413610563","tls":true,"servername":"mkh3.kurdbazar.online","network":"ws","ws-opts":{"path":"/"}}
+  - {"name":"🇸🇬_SG_新加坡->🇺🇸_US_美国_1","type":"vmess","server":"8.222.235.92","port":80,"cipher":"auto","uuid":"ffffffff-ffff-ffff-ffff-ffffffffffff","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"warp.chigua.tk"}}}
+  - {"name":"🇺🇸_US_美国->🇬🇧_GB_英国","type":"vmess","server":"mrb2.shabijichang.com","port":80,"cipher":"auto","uuid":"c458695d-6908-45c3-9512-e0c46418454c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"mrb2.shabijichang.com"}}}
+  - {"name":"🇬🇧_GB_英国_2","type":"ss","server":"198.244.231.25","port":443,"password":"asdKkaskJKfnsa","cipher":"aes-256-cfb"}
+  - {"name":"🇨🇳_CN_中国->🇬🇮_GI_直布罗陀","type":"vmess","server":"cnah2.lanyunshi.cc","port":60010,"cipher":"auto","uuid":"0b192ff2-7718-3206-93f4-6a260a422cc8","alterId":2,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰_2","type":"vless","server":"162.159.138.232","port":443,"uuid":"97d26fd0-e2ac-4b1f-a098-f422fc49bd30","tls":true,"servername":"singbox.cypherpunks.asia","network":"ws","ws-opts":{"path":"/cypherpunks"}}
+  - {"name":"🇨🇦_CA_加拿大->🇩🇪_DE_德国","type":"vless","server":"199.212.90.8","port":443,"uuid":"2311142c-3d39-4cca-8f22-55b76b60cb07","tls":true,"servername":"Jefdgjbkh.mahizan.com","network":"ws","ws-opts":{"path":"/"}}
+  - {"name":"🇨🇦_CA_加拿大->🇬🇧_GB_英国","type":"vmess","server":"64.68.192.77","port":443,"cipher":"auto","uuid":"03fcc618-b93d-6796-6aed-8a38c975d581","alterId":1,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"linkvws","headers":{"host":"ophelia.mom"}}}
+  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰_3","type":"vmess","server":"45.199.138.146","port":30000,"cipher":"auto","uuid":"4ec0ae62-de09-4029-904a-0313d4628ecf","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws"}
+  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国_2","type":"vmess","server":"172.67.215.230","port":2095,"cipher":"auto","uuid":"1F7C900A-6AD7-41CF-A37E-85873E566C40","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/surfboardv2ray.jilino2325.workers.dev/speedtest/Lille.Kotick.site","headers":{"host":"erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev"}}}
+  - {"name":"🇸🇬_SG_新加坡->🇺🇸_US_美国_2","type":"vmess","server":"8.222.198.105","port":80,"cipher":"auto","uuid":"ffffffff-ffff-ffff-ffff-ffffffffffff","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"warp.chigua.tk"}}}
+  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_2","type":"vless","server":"104.24.177.7","port":443,"uuid":"8ec059b9-7d52-443a-bb7c-8d82c2ce4cbf","tls":true,"servername":"ws.ArV2ray.fun","network":"ws","ws-opts":{"path":"/"}}
+  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国","type":"ss","server":"bjcu.xzyunjiasu.icu","port":33952,"password":"5c8b210a-2f00-4292-964b-05281c7ad5d1","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"45.58.152.70","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1699193100388","headers":{"host":"www.54964745.xyz"}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -246,21 +330,33 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸_US_美国_1
-      - 🇫🇷_FR_法国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国->🇫🇷_FR_法国_1
-      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇺🇸_US_美国->🇮🇳_IN_印度
+      - 🇫🇷_FR_法国
+      - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇬🇧_GB_英国_1
       - 🇨🇳_CN_中国->🇬🇧_GB_英国
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_3
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇦🇫_AF_阿富汗
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国->🇫🇷_FR_法国_4
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
       - 🇺🇸_US_美国_4
-      - 🇩🇪_DE_德国_1
+      - 🇨🇭_CH_瑞士
       - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
-      - 🇩🇪_DE_德国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇬🇧_GB_英国_2
+      - 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+      - 🇨🇦_CA_加拿大->🇩🇪_DE_德国
+      - 🇨🇦_CA_加拿大->🇬🇧_GB_英国
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰_3
+      - 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      - 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国->🇺🇸_US_美国
+      - 🇺🇸_US_美国_6
 
 rules:
 # 本地/局域网地址
